--- a/pages/danso-run.html
+++ b/pages/danso-run.html
@@ -13,7 +13,7 @@
       <header></header>
       <div id="wrap" class="canvas-wrap">
         <div class="state">
-          <div class="tit">7호선 RUN!</div>
+          <div class="tit">단소 RUN!</div>
           <div class="score">
             <div class="tit">SCORE</div>
             <div id="score" class="num">0</div>
@@ -28,10 +28,24 @@
           </button>
         </div>
         <canvas id="canvas"></canvas>
-        <button type="button" id="btnStart" class="btn-start">
-          GAME START!
-        </button>
+        <div class="float-area">
+          <div id="result" class="result">
+            <div class="score">
+              <div id="resultScore" class="num">0</div>
+              점
+            </div>
+          </div>
+          <button type="button" id="btnStart" class="btn-start">
+            GAME START!
+          </button>
+        </div>
       </div>
+      <ul id="test">
+        <li>running: <span id="running-show"></span></li>
+        <li>paused: <span id="paused-show"></span></li>
+        <li>dead: <span id="dead-show"></span></li>
+        <li>jump: <span id="jump-show"></span></li>
+      </ul>
     </div>
     <style>
       .canvas-wrap {
@@ -57,19 +71,31 @@
       .state .score .tit {
         margin-right: 20px;
       }
-      .btn-start {
+      .float-area {
         display: none;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        content: "";
         position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
+      .float-area.show {
+        display: flex;
+      }
+      .btn-start {
+        display: block;
+        position: relative;
+        z-index: 100;
         padding: 20px 30px;
         background: #666;
         font-size: 30px;
         color: #fff;
-      }
-      .btn-start.show {
-        display: block;
       }
       .btn-toggle {
         margin: -10px;
@@ -77,6 +103,41 @@
       }
       .btn-toggle {
         background: #ff0000;
+      }
+      .result .score {
+        display: flex;
+        align-items: center;
+        position: relative;
+        z-index: 100;
+        margin-bottom: 20px;
+        font-size: 30px;
+        color: #fff;
+      }
+      .result .score .num {
+        margin-right: 10px;
+        font-size: 50px;
+      }
+
+      .result::after {
+        display: block;
+        content: "";
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        z-index: 50;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.3);
+      }
+
+      #test {
+        position: fixed;
+        bottom: 50px;
+        left: 50px;
+        font-size: 50px;
+        font-weight: 700;
       }
     </style>
     <script src="../assets/js/dansoRun.js"></script>
